Tweak about text and copy link button

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -44,7 +44,7 @@ const tags = getTags();
               <li><strong>Road signs</strong></li>
               <li><strong>Lantern Press</strong> (except "Protect Our Parks" - I have those)</li>
               <li><strong>LouPaper States</strong> (not only from their state of origin; I have AL/AR/CA/CO/OH/IL/VA/WI, and on the way RI/AK/HI/MI)</li>
-              <li><strong>Animation and Games:</strong> Studio Ghibli, Makoto Shinkai, Frieren, Genshin Impact, Pokémon, World of Warcraft, Don't Starve, Dandadan, Delicious in Dungeon, Sakamoto</li>
+              <li><strong>Animation and Games:</strong> Makoto Shinkai, Frieren, Genshin Impact, Pokémon, World of Warcraft, Don't Starve, Dandadan, Delicious in Dungeon, Sakamoto</li>
               <li><strong>Memes</strong> ( ͡° ͜ʖ ͡°)</li>
               <li><strong>猫的天空之城:</strong>"漫游xx"系列(作者:無月)</li>
               <li><strong>Виды природы из серии Моя Россия</strong>. Кроме тех наборов, что у меня на обмен.</li>
